--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
         'div',
         { className: 'quiz-container cursor-quill' },
         React.createElement('h2', { className: 'subtitle' }, 'Enter Your Details'),
-        React.createElement('p', { className: 'text-gray-300' }, 'Provide your adventurer’s name and email to discover your Ataraxia realm and receive the first chapter of Ataraxia.'),
+        React.createElement('p', { className: 'text-gray-300' }, 'Provide your adventurer’s name and email to discover your Ataraxia realm.'),
         React.createElement(
           'div',
           { style: { display: 'flex', flexDirection: 'column', alignItems: 'center' } },
@@ -639,3 +639,4 @@
   <script defer src="https://sibforms.com/forms/end-form/build/main.js"></script>
 </body>
 </html>
+
